Editing a value with hover+return does not accept 0 as input #88058

Closed
opened 2021-05-05 15:32:12 +02:00 by Simon Thommes · 8 comments
Member

System Information
Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-03 08:23, hash: ee8593fe76
Worked: version: 2.93.0 Beta, branch: master, commit date: 2021-05-04 20:58, hash: 96abe5ebbc

Short description of error
Editing any value field by hovering over it and pressing return does not accept 0 as an input. Any other value works fine.

Exact steps for others to reproduce the error

  • Hover over value field
  • Press return key
  • Type in 0
  • Press return key
**System Information** Operating system: Linux-5.8.0-7630-generic-x86_64-with-glibc2.32 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.32.03 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-05-03 08:23, hash: `ee8593fe76` Worked: version: 2.93.0 Beta, branch: master, commit date: 2021-05-04 20:58, hash: `96abe5ebbc` **Short description of error** Editing any value field by hovering over it and pressing return does not accept 0 as an input. Any other value works fine. **Exact steps for others to reproduce the error** - Hover over value field - Press return key - Type in 0 - Press return key
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Falk David self-assigned this 2021-05-05 15:45:28 +02:00
Member

I can confirm this. Will look into this as I have a feeling what might be going on.

I can confirm this. Will look into this as I have a feeling what might be going on.
Author
Member

@filedescriptor great, thanks! Very niche issue, but it's driving me a bit insane :D

@filedescriptor great, thanks! Very niche issue, but it's driving me a bit insane :D
Member

@SimonThommes I might have been the one who introduced this issue... So I felt bad haha 😅

@SimonThommes I might have been the one who introduced this issue... So I felt bad haha 😅

This issue was referenced by ec30cf0b74

This issue was referenced by ec30cf0b742f5181c4de91b474ca01d6a809c593
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88058
No description provided.